@@ -152,7 +152,7 @@ public class AggregateAnalyzer {
       } else if (node instanceof RexCall || node instanceof RexLiteral) {
         return scriptBuilder.apply(
             (new PredicateAnalyzer.ScriptQueryExpression(
-                    node, rowType, fieldTypes, cluster, Map.of()))
+                    node, rowType, fieldTypes, cluster, Collections.emptyMap()))
                 .getScript());
       }
       throw new IllegalStateException(
